# 3bc-command

./: CMakeLists.txt  Makefile  shell.nix
include/: github.h  macros.h  tools.h  utils.h
src/: main.c
src/api/: github.c
src/tools/: help.c  update.c  vm.c
src/utils/: cli.c  curl.c  curl_progressbar.c  fs.c  humansize.c
