cmake_minimum_required(VERSION 3.12)
project(3BC_CLI)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
endif()

if(LOG_USE_COLOR)
  add_definitions("-DLOG_USE_COLOR")
endif()
file(GLOB_RECURSE SOURCES "src/*.c" "src/tools/*.c" "submodules/log.c/src/*.c")
add_executable(3bc "${SOURCES}")
target_include_directories(3bc PUBLIC "include" "submodules/log.c/src")
find_package(json-c REQUIRED)
find_package(CURL REQUIRED)
target_link_libraries(3bc PRIVATE json-c::json-c)
target_link_libraries(3bc PRIVATE m)
if(CURL_FOUND)
  target_link_libraries(3bc PRIVATE ${CURL_LIBRARIES})
endif()
